--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^5.9.11"
   },
   "devDependencies": {
-    "jest": "^25.5.3"
+    "jest": "^25.5.3",
+    "node-mocks-http": "^1.8.1"
   }
 }
