--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "jest": "^25.5.3",
-    "node-mocks-http": "^1.8.1"
+    "node-mocks-http": "^1.8.1",
+    "supertest": "^4.0.2"
   }
 }
